repositories/ibm-charts/ibm-open-liberty/1.5.0/README.md
# `@helm-charts/ibm-charts-ibm-open-liberty`

Open Liberty is an open source runtime for Java microservices and cloud-native apps.

| Field               | Value            |
| ------------------- | ---------------- |
| Repository Name     | ibm-charts       |
| Chart Name          | ibm-open-liberty |
| Chart Version       | 1.5.0            |
| NPM Package Version | 0.1.0            |

<details>

<summary>Helm chart `values.yaml` (default values)</summary>

```yaml
###############################################################################
# Copyright (c) 2017 IBM Corp.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
###############################################################################

###############################################################################
## Common image variables
###############################################################################
image:
  repository: open-liberty
  tag: latest
  pullPolicy: IfNotPresent

service:
  enabled: true
  name: http-liberty
  port: 9443
  targetPort: 9443
  type: NodePort

jmsService:
  enabled: false
  name: jms-liberty
  port: 7286
  targetPort: 7286
  type: NodePort

iiopService:
  enabled: false
  name: iiop-liberty
  nonSecurePort: 2809
  nonSecureTargetPort: 2809
  securePort: 9402
  secureTargetPort: 9402
  type: NodePort

ssl:
  enabled: true
  useClusterSSLConfiguration: false
  createClusterSSLConfiguration: false

ingress:
  enabled: false
  rewriteTarget: '/'
  path: '/'
  host: ''
  secretName: ''

###############################################################################
## Persistence Storage
###############################################################################

## Persistence is disabled by default, set Enabled: true to use
persistence:
  name: 'liberty-pvc'
  ## Tranlog requires a Persistence Storage volume size minimum of 1Gi
  size: '1Gi'

  useDynamicProvisioning: true

  ## Specify the name of the StorageClass
  ## Setting StorageClass: "" will use whatever storageClass is currently
  ## setup as the Default
  storageClassName: ''

  # if your not using dynamic provisioning, you can use selectors to
  # refine the binding process. You cannot specify a selector if your using dynamic provisioning!
  selector:
    label: ''
    value: ''

###############################################################################
## Logs
###############################################################################
logs:
  persistLogs: false
  persistTransactionLogs: false
  consoleFormat: json
  consoleLogLevel: info
  consoleSource: message,trace,accessLog,ffdc

###############################################################################
## MicroProfile
###############################################################################
microprofile:
  health:
    enabled: false

###############################################################################
## Auto scaling
###############################################################################
replicaCount: 1
autoscaling:
  enabled: false
  minReplicas: 1
  maxReplicas: 10
  targetCPUUtilizationPercentage: 50

###############################################################################
## Resource constraints
###############################################################################
resources:
  constraints:
    enabled: false
  requests:
    cpu: 500m
    memory: 512Mi
  limits:
    cpu: 500m
    memory: 512Mi

###############################################################################
## Architecture
###############################################################################
# Specify architecture (amd64, ppc64le, s390x) and weight to be
# used for scheduling as follows :
#   0 - Do not use
#   1 - Least preferred
#   2 - No preference
#   3 - Most preferred
arch:
  amd64: '2 - No preference'
  ppc64le: '2 - No preference'
  s390x: '2 - No preference'

###############################################################################
## Environmental variables
###############################################################################
env:
  jvmArgs: ''

###############################################################################
## Session cache
###############################################################################
sessioncache:
  hazelcast:
    enabled: false
    image:
      repository: hazelcast/hazelcast-kubernetes
      tag: '3.10'
      pullPolicy: IfNotPresent

###############################################################################
## Role-Based Access Control
###############################################################################
rbac:
  install: true
```

</details>

---

# Open Liberty Helm Chart

## Introduction

Open Liberty provides developers with proven Java EE 7 technology and the latest Eclipse MicroProfile™ capabilities for building microservices. Building cloud-native apps and microservices has never been more efficient, since you only have to run what you need. Our goal is to give you just enough to get the job done without getting in your way.

## Resources Required

A persistent volume is required, if you plan on using the transaction service within Liberty. The `server.xml` Liberty configuration file must be configured to place the transaction log on this volume so that it persists, if the server fails and restarts.

## Accessing Open Liberty

From a browser, use http://*external-ip*:*nodeport* to access the application.

## Chart Details

## Prerequisites

None

## Limitations

See RELEASENOTES.md.

### Installing the Chart

The Helm chart has the following values that can be overridden by using `--set name=value`. For example:

- `helm repo add ibm-charts https://raw.githubusercontent.com/IBM/charts/master/repo/stable/`
- `helm install --name open-liberty --set resources.constraints.enabled=true --set autoscaling.enabled=true --set autoscaling.minReplicas=2 ibm-charts/ibm-open-liberty --debug`

### Configuration

| Qualifier      | Parameter                        | Definition                                                                                                                                                                                                                                                                                                                                               | Allowed Value                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| -------------- | -------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `image`        | `pullPolicy`                     | Image Pull Policy.                                                                                                                                                                                                                                                                                                                                       | `Always`, `Never`, or `IfNotPresent`. Defaults to `Always` if the `:latest` tag is specified, or `IfNotPresent` otherwise. See Kubernetes - [Updating Images](https://kubernetes.io/docs/concepts/containers/images/#updating-images)                                                                                                                                                                                                                                                                                                                                                        |
|                | `repository`                     | Name of image, including repository prefix (if required).                                                                                                                                                                                                                                                                                                | See Docker - [Extended tag description](https://docs.docker.com/engine/reference/commandline/tag/#parent-command)                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|                | `tag`                            | Docker image tag.                                                                                                                                                                                                                                                                                                                                        | See Docker - [Tag](https://docs.docker.com/engine/reference/commandline/tag/)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| `service`      | `enabled`                        | Specifies whether the HTTP port service is enabled or not.                                                                                                                                                                                                                                                                                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `name`                           | The name of the HTTP port service.                                                                                                                                                                                                                                                                                                                       |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `port`                           | The HTTP port that this container exposes.                                                                                                                                                                                                                                                                                                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `targetPort`                     | HTTP Port that will be exposed externally by the pod.                                                                                                                                                                                                                                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `type`                           | Specify type of service.                                                                                                                                                                                                                                                                                                                                 | Valid options are `ClusterIP` and `NodePort`. See [Publishing services - service types](https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services---service-types). This parameter is ignored for headless services and instead, it is forced to `clusterIP` with a value of `None`. This chart makes a service headless when persistence is enabled, which is done by setting either `logs.persistTransactionLogs` or `logs.persistLogs` to `true`. See [Headless services](https://kubernetes.io/docs/concepts/services-networking/service/#headless-services). |
| `iiopService`  | `enabled`                        | Specifies whether the IIOP port service is enabled or not.                                                                                                                                                                                                                                                                                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `name`                           | The name of the IIOP port service.                                                                                                                                                                                                                                                                                                                       |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `nonSecurePort`                  | The IIOP port that this container exposes.                                                                                                                                                                                                                                                                                                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `nonSecureTargetPort`            | IIOP Port that will be exposed externally by the pod.                                                                                                                                                                                                                                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `securePort`                     | The secure IIOP port that this container exposes. Specifying this port is needed if SSL is enabled.                                                                                                                                                                                                                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `secureTargetPort`               | Secure IIOP Port that will be exposed externally by the pod. Specifying this port is needed if SSL is enabled.                                                                                                                                                                                                                                           |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `type`                           | Specify type of service.                                                                                                                                                                                                                                                                                                                                 | Valid options are `ClusterIP` and `NodePort`. See [Publishing services - service types](https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services---service-types). This parameter is ignored for headless services and instead, it is forced to `clusterIP` with a value of `None`. This chart makes a service headless when persistence is enabled, which is done by setting either `logs.persistTransactionLogs` or `logs.persistLogs` to `true`. See [Headless services](https://kubernetes.io/docs/concepts/services-networking/service/#headless-services). |
| `jmsService`   | `enabled`                        | Specifies whether the JMS port service is enabled or not.                                                                                                                                                                                                                                                                                                |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `name`                           | The name of the JMS port service.                                                                                                                                                                                                                                                                                                                        |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `port`                           | The JMS port that this container exposes.                                                                                                                                                                                                                                                                                                                |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `targetPort`                     | JMS Port that will be exposed externally by the pod.                                                                                                                                                                                                                                                                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `type`                           | Specify type of service.                                                                                                                                                                                                                                                                                                                                 | Valid options are `ClusterIP` and `NodePort`. See [Publishing services - service types](https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services---service-types). This parameter is ignored for headless services and instead, it is forced to `clusterIP` with a value of `None`. This chart makes a service headless when persistence is enabled, which is done by setting either `logs.persistTransactionLogs` or `logs.persistLogs` to `true`. See [Headless services](https://kubernetes.io/docs/concepts/services-networking/service/#headless-services). |
| `ssl`          | `enabled`                        | Specifies whether SSL is enabled. Set to `true` if SSL will be enabled via the generated SSL configuration or if Liberty is configured to use SSL in the Docker image.                                                                                                                                                                                   | `true` (default) or `false`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `useClusterSSLConfiguration`     | Set to `true` if you want to use the SSL ConfigMap and secrets generated by the `createClusterSSLConfiguration` option. Set to `false` if the Docker image already has SSL configured.                                                                                                                                                                   | `false` (default) or `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `createClusterSSLConfiguration`  | Specifies whether to automatically generate SSL ConfigMap and secrets. The generated ConfigMap is: `liberty-config`. The generated secrets are: `mb-keystore`, `mb-keystore-password`, `mb-truststore`, and `mb-truststore-password`. Only generate the SSL configuration one time. If you generate the configuration a second time, errors might occur. | `false` (default) or `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `ingress`      | `enabled`                        | Specifies whether to use Ingress.                                                                                                                                                                                                                                                                                                                        | `false` (default) or `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `rewriteTarget`                  | Specifies the target URI where the traffic must be redirected.                                                                                                                                                                                                                                                                                           | See Kubernetes - Annotation `ingress.kubernetes.io/rewrite-target` - [Rewrite Target](https://github.com/kubernetes/ingress-nginx/tree/master/docs/examples/rewrite)                                                                                                                                                                                                                                                                                                                                                                                                                         |
|                | `path`                           | Specifies the path for the Ingress HTTP rule.                                                                                                                                                                                                                                                                                                            | See Kubernetes - [Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|                | `host`                           | Specifies a fully qualified domain names of Ingress, as defined by RFC 3986.                                                                                                                                                                                                                                                                             | See [Ingress configuration](#ingress-configuration) for more into on this.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|                | `secretName`                     | Specifies the name of the Kubernetes secret that contains Ingress' TLS certificate and key.                                                                                                                                                                                                                                                              | See [Ingress configuration](#ingress-configuration) for more into on this.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| `persistence`  | `name`                           | Descriptive name that will be used as prefix for the generated persistence volume claim. A volume is only bound if either `logs.persistTransactionLogs` or `logs.persistLogs` is set to `true`.                                                                                                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `useDynamicProvisioning`         | If `true`, the persistent volume claim will use the `storageClassName` to bind the volume. If `storageClassName` is not set then it will use the default StorageClass setup by kube Administrator. If `false`, the selector will be used for the binding process.                                                                                        | `true` (default) or `false`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `storageClassName`               | Specifies a StorageClass pre-created by the Kubernetes sysadmin. When set to `""`, then the PVC is bound to the default StorageClass setup by kube Administrator.                                                                                                                                                                                        |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|                | `selector.label`                 | When matching a PV, the label is used to find a match on the key.                                                                                                                                                                                                                                                                                        | See Kubernetes - [Labels and Selectors](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/).                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |  |
|                | `selector.value`                 | When matching a PV, the value is used to find a match on the values.                                                                                                                                                                                                                                                                                     | See Kubernetes - [Labels and Selectors](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/).                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |  |
|                | `size`                           | Size of the volume to hold all the persisted data.                                                                                                                                                                                                                                                                                                       | Size in `Gi` (default is `1Gi`)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| `logs`         | `persistLogs`                    | When `true`, the server logs will be persisted to the volume bound according to the persistence parameters.                                                                                                                                                                                                                                              | `false` (default) or `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `persistTransactionLogs`         | When `true`, the transaction logs will be persisted to the volume bound according to the persistence parameters.                                                                                                                                                                                                                                         | `false` (default) or `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `consoleFormat`                  | _[18.0.0.1+]_ Specifies container log output format.                                                                                                                                                                                                                                                                                                     | `json` (default) or `basic`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `consoleLogLevel`                | _[18.0.0.1+]_ Controls the granularity of messages that go to the container log.                                                                                                                                                                                                                                                                         | `info` (default), `audit`, `warning`, `error` or off                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|                | `consoleSource`                  | _[18.0.0.1+]_ Specifies the sources that are written to the container log. Use a comma separated list for multiple sources. This property only applies when `consoleFormat` is set to `json`.                                                                                                                                                            | `message`, `trace`, `accessLog`, `ffdc` (default)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| `microprofile` | `health.enabled`                 | Specifies whether to use the [MicroProfile Health](https://microprofile.io/project/eclipse/microprofile-health) endpoint (`/health`) for readiness probe of the container.                                                                                                                                                                               | `false` (default) or `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `replicaCount` |                                  | Describes the number of desired replica pods running at the same time.                                                                                                                                                                                                                                                                                   | Default is `1`. See [Replica Sets](https://kubernetes.io/docs/concepts/workloads/controllers/replicaset)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| `autoscaling`  | `enabled`                        | Specifies whether a horizontal pod autoscaler (HPA) is deployed. Note that enabling this field disables the `replicaCount` field.                                                                                                                                                                                                                        | `false` (default) or `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `minReplicas`                    | Lower limit for the number of pods that can be set by the autoscaler.                                                                                                                                                                                                                                                                                    | Positive integer (default to `1`)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|                | `maxReplicas`                    | Upper limit for the number of pods that can be set by the autoscaler. Cannot be lower than `minReplicas`.                                                                                                                                                                                                                                                | Positive integer (default to `10`)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|                | `targetCPUUtilizationPercentage` | Target average CPU utilization (represented as a percentage of requested CPU) over all the pods.                                                                                                                                                                                                                                                         | Integer between `1` and `100` (default to `50`)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| `resources`    | `constraints.enabled`            | Specifies whether the resource constraints specified in this Helm chart are enabled.                                                                                                                                                                                                                                                                     | `false` (default) or `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|                | `limits.cpu`                     | Describes the maximum amount of CPU allowed.                                                                                                                                                                                                                                                                                                             | Default is `500m`. See Kubernetes - [meaning of CPU](https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/#meaning-of-cpu)                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|                | `limits.memory`                  | Describes the maximum amount of memory allowed.                                                                                                                                                                                                                                                                                                          | Default is `512Mi`. See Kubernetes - [meaning of Memory](https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/#meaning-of-memory)                                                                                                                                                                                                                                                                                                                                                                                                                            |
|                | `requests.cpu`                   | Describes the minimum amount of CPU required. If not specified, the CPU amount will default to the limit (if specified) or the implementation-defined value.                                                                                                                                                                                             | Default is `500m`. See Kubernetes - [meaning of CPU](https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/#meaning-of-cpu)                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|                | `requests.memory`                | Describes the minimum amount of memory required. If not specified, the memory amount will default to the limit (if specified) or the implementation-defined value.                                                                                                                                                                                       | Default is `512Mi`. See Kubernetes - [meaning of Memory](https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/#meaning-of-memory)                                                                                                                                                                                                                                                                                                                                                                                                                            |
| `arch`         | `amd64`                          | Architecture preference for amd64 worker node.                                                                                                                                                                                                                                                                                                           | `0 - Do not use`, `1 - Least preferred`, `2 - No preference` (default) or `3 - Most preferred`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|                | `ppc64le`                        | Architecture preference for ppc64le worker node.                                                                                                                                                                                                                                                                                                         | `0 - Do not use`, `1 - Least preferred`, `2 - No preference` (default) or `3 - Most preferred`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|                | `s390x`                          | Architecture preference for s390x worker node.                                                                                                                                                                                                                                                                                                           | `0 - Do not use`, `1 - Least preferred`, `2 - No preference` (default) or `3 - Most preferred`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| `env`          | `jvmArgs`                        | Specifies the `JVM_ARGS` environmental variable for the Liberty runtime.                                                                                                                                                                                                                                                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| `sessioncache` | `hazelcast.enabled`              | Enable session caching using Hazelcast                                                                                                                                                                                                                                                                                                                   | `false`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|                | `hazelcast.image.repository`     | Name of Hazelcast image, including repository prefix (if required).                                                                                                                                                                                                                                                                                      | `hazelcast/hazelcast-kubernetes`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|                | `hazelcast.image.tag`            | Docker image tag                                                                                                                                                                                                                                                                                                                                         | `3.10`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|                | `hazelcast.image.pullPolicy`     | Image Pull Policy                                                                                                                                                                                                                                                                                                                                        | `IfNotPresent`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| `rbac`         | `install`                        | Install RBAC. Set to `true` if using a namespace with RBAC.                                                                                                                                                                                                                                                                                              | `true`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |

### Configuring Open Liberty

#### Open Liberty Docker image requirements

The Helm chart requires the Docker image to have certain directories linked. The `open-liberty` image from Docker Hub will already have the expected links. If you are not using that image, either directly or as parent image, then you must add the following to your Dockerfile:

```shell
ENV PATH /opt/ol/wlp/bin:/opt/ol/docker/:$PATH
ENV LOG_DIR /logs
ENV WLP_OUTPUT_DIR /opt/ol/wlp/output

RUN mkdir -p /logs \
    && mkdir -p $WLP_OUTPUT_DIR/defaultServer \
    && ln -s $WLP_OUTPUT_DIR/defaultServer /output \
    && ln -s /opt/ol/wlp/usr/servers/defaultServer /config \
    && ln -s /logs $WLP_OUTPUT_DIR/defaultServer/logs
```

#### ConfigMap

The Helm release ConfigMap contains Liberty server configuration that is driven by the configuration choices of the chart deployer, using associated environmental variables. The Liberty container receives automatic updates to files from this ConfigMap.

#### Transaction logs

If the server fails and restarts, then to persist the transaction logs (preserve them through server restarts) you must set `logs.persistTransactionLogs` to `true` and configure persistence in the Helm chart. You must also add the following to your `server.xml` in your Docker image.

```xml
<transaction recoverOnStartup="true" waitForRecovery="true" />
```

#### Persisting logs

Create a persistent volume (PV) in a shared storage, NFS for example, with the following specification:

```yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: <persistent volume name>
spec:
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  storageClassName: <optional - must match PVC>
  nfs:
    server: <NFS Server IP>
    path: <NFS PATH>
```

_Note:_ For NFS PATH you need to create your directory manually before deploying the persistent volume.

You can create a PV using the above template by executing:

```shell
kubectl create -f <yaml-file>
```

You can also create a PV from IBM Cloud Private dashboard by following these steps:

1. From the dashboard panel, click **Create resource**.
2. Copy and paste the PV template.
3. Click **Create**.

#### Analyzing Liberty messages

Logging in JSON format is enabled by default. Log events are forwarded to Elasticsearch automatically. Use Kibana to monitor and analyze the log events. Sample Kibana dashboards are provided at the Helm chart's [additionalFiles](https://github.com/IBM/charts/tree/master/stable/ibm-open-liberty/additionalFiles/) folder.

#### SSL configuration

SSL is enabled by default. The chart automatically adds the `ssl-1.0` feature to your application server. When SSL is enabled, only secure ports are exposed. These ports are `9443` (HTTPS), `9402` (IIOPS), and `7286` (JMS). Only the ports you enable are exposed. When SSL is enabled, the application must be accessed accordingly, e.g. `https://`.

Note that due to requirements of the IIOP protocol, when you enable both IIOP and SSL, a secure and non-secure IIOP are configured, with the default port values of `9402` (secure) and `2809` (non-secure).

It is highly recommended to set `createClusterSSLConfiguration` and `useClusterSSLConfiguration` to true to establish trust between applications.

To turn off SSL:

1. Set `ssl.enabled` to `false`.
2. Depending on which ports you enable, change `port` and `targetPorts` to non-secure ports. By convention, the default port numbers for non-secure mode are `9080` (HTTPS), `2809` (IIOP), and `7276` (JMS).

#### Ingress configuration

If you are deploying your chart into IBM Cloud Private:

- `ingress.host` can be provided and set to a fully-qualified domain name that resolves to the IP address of your cluster’s proxy node. For example `example.com` resolved to the proxy node. When a domain name is not available, the service [`nip.io`](http://nip.io) can be used to provide a resolution based on an IP address. For example, `liberty.<IP>.nip.io` where `<IP>` would be replaced with the IP address of your cluster’s proxy node. The IP address of your cluster’s proxy node can be found by using the following command: `kubectl get nodes -l proxy=true`. Users can also leave this parameter as empty.

- `ingress.secretName` set to the name of the secret containing Ingress TLS certificate and key. If this is not provided, it dynamically creates a self-signed certificate/key, stores it in a Kubernetes secret and uses the secret in Ingress' TLS.

If the chart is deployed into IBM Cloud Kubernetes Service:

- `ingress.host` must be provided and set to the IBM-provided Ingress _subdomain_ or your custom domain. See [Select an app domain and TLS termination](https://console.bluemix.net/docs/containers/cs_ingress.html#public_inside_2) for more info on how to get this value in IBM Cloud Kubernetes Service.
- `ingress.secretName` must be provided. If you are using the IBM-provided Ingress domain, set this parameter to the name of the IBM-provided Ingress secret. However, if you are using a custom domain, set this parameter to the secret that you created earlier that holds your custom TLS certificate and key. See [IBM Cloud Kubernetes Service documentation](https://console.bluemix.net/docs/containers/cs_ingress.html#public_inside_2) for more info on how to get these value in an IBM Cloud Kubernetes Service cluster.

#### Session Caching

Session caching is disabled by default. To use session caching, the Liberty feature sessionCache-1.0 must be installed. The session caching feature builds on top of an existing technology called JCache (JSR 107), which provides an API for distributed in-memory caching. There are several providers of JCache implementations. One example is Hazelcast In-Memory Data Grid. Enabling Hazelcast session caching automatically retrieves the Hazelcast client libraries from the hazelcast-kubernetes image, and configures the Hazelcast client and Liberty server feature sessionCache-1.0. The configuration is held in the ConfigMap associated with the helm release. By default, the Hazelcast client will auto-discover the Hazelcast server cluster within the same namespace.

#### Resource Reference

The helm chart creates the following Kubernetes resources that drive the configuration of the Liberty container. The configuration is used to ensure consistency of protocol, port and security configuration between the helm deployed Kubernetes objects and Liberty.

| Resource               | Content                            | Container mount                          | Description                                                                                             |
| ---------------------- | ---------------------------------- | ---------------------------------------- | ------------------------------------------------------------------------------------------------------- |
| `Secret`               |                                    |                                          |                                                                                                         |
| mb-keystore            | jks binary                         | /etc/wlp/config/keystore                 | Namespace scope JKS keystore binary.                                                                    |
| mb-keystore-password   | mb-keystore-password               | env `MB_KEYSTORE_PASSWORD`               | Namespace scope JKS keystore password.                                                                  |
| mb-truststore          | jks binary                         | /etc/wlp/config/truststore               | Namespace scope JKS truststore binary.                                                                  |
| mb-truststore-password | mb-truststore-password             | env `MB_TRUSTSTORE_PASSWORD`             | Namespace scope JKS truststore password.                                                                |
| `ConfigMap`            |                                    |                                          |                                                                                                         |
| _fullname_             | include-configmap.xml              | /config/configDropins/overrides/         | Includes subsequent Liberty ConfigMap files. Container does not receive automatic updates to this file. |
|                        | server.xml                         | /etc/wlp/configmap/                      | Available to modify running configuration. Container receives automatic updates to this file.           |
|                        | http-endpoint.xml                  | /etc/wlp/configmap/                      | Configures HTTP endpoint port.                                                                          |
|                        | https-endpoint.xml                 | /etc/wlp/configmap/                      | Configures HTTPS endpoint port.                                                                         |
|                        | iiop-endpoint.xml                  | /etc/wlp/configmap/                      | Configures IIOP endpoint port.                                                                          |
|                        | iiop-ssl-endpoint.xml              | /etc/wlp/configmap/                      | Configures IIOPS endpoint port.                                                                         |
|                        | jms-ssl-endpoint.xml               | /etc/wlp/configmap/                      | Configures JMSS endpoint port.                                                                          |
|                        | jms-endpoint.xml                   | /etc/wlp/configmap/                      | Configures JMS endpoint port.                                                                           |
|                        | ssl.xml                            | /etc/wlp/configmap/                      | Configures SSL.                                                                                         |
|                        | cluster-ssl.xml                    | /etc/wlp/configmap/                      | Configures SSL with cluster/namespace `mb` secrets.                                                     |
|                        | liberty-sessioncache-hazelcast.xml | /etc/wlp/configmap/                      | Configures Liberty session cache & Hazelcast client libraries.                                          |
|                        | hazelcast-client.xml               | /opt/ibm/wlp/usr/shared/config/hazelcast | Configures Hazelcast client.                                                                            |

The helm chart augments the Liberty container with the following environmental variables.

| Environmental Variable           | Description                                              |
| -------------------------------- | -------------------------------------------------------- |
| `JVM_ARGS`                       | Sets `JVM_ARGS` used by Liberty JVM                      |
| `WLP_LOGGING_CONSOLE_FORMAT`     | Determines json or standard log format.                  |
| `WLP_LOGGING_CONSOLE_LOGLEVEL`   | Determines log level.                                    |
| `WLP_LOGGING_CONSOLE_SOURCE`     | Determines log sources to print to console output.       |
| `POD_IP`                         | Downward API status.podIP                                |
| `HTTPENDPOINT_HTTPSPORT`         | Helm configured HTTPS port.                              |
| `HTTPENDPOINT_HTTPPORT`          | Helm configured HTTP port.                               |
| `IIOPENDPOINT_IIOPSPORT`         | Helm configured IIOPS port.                              |
| `IIOPENDPOINT_IIOPPORT`          | Helm configured IIOP port.                               |
| `JMSENDPOINT_JMSSPORT`           | Helm configured JMSS port.                               |
| `JMSENDPOINT_JMSPORT`            | Helm configured JMS port.                                |
| `HAZELCAST_KUBERNETES_NAMESPACE` | Current namespace, used by Hazelcast for auto-discovery. |
| `KEYSTORE_REQUIRED`              | Determines whether keystore is generated.                |
| `MB_KEYSTORE_PASSWORD`           | Namespace scope JKS keystore password.                   |
| `MB_TRUSTSTORE_PASSWORD`         | Namespace scope JKS truststore password.                 |

## More information

See [Open Liberty website](https://openliberty.io/) for configuration options for deploying the Open Liberty server.

## Service information

This Helm chart installs the open source product Open Liberty. Refer to the [Open Liberty website](https://openliberty.io/) to get service for Open Liberty.
